ghc-6.2/hslibs/win32/Win32WinMessage_stub_ffi.h

#include <windows.h>
#include "win32debug.h"
#include "HsFFI.h"
extern DWORD prim_wM_COMPACTING();
extern DWORD prim_wM_WININICHANGE();
extern DWORD prim_wM_SYSCOLORCHANGE();
extern DWORD prim_wM_QUERYNEWPALETTE();
extern DWORD prim_wM_PALETTEISCHANGING();
extern DWORD prim_wM_PALETTECHANGED();
extern DWORD prim_wM_FONTCHANGE();
extern DWORD prim_wM_SPOOLERSTATUS();
extern DWORD prim_wM_DEVMODECHANGE();
extern DWORD prim_wM_TIMECHANGE();
extern DWORD prim_wM_POWER();
extern DWORD prim_wM_QUERYENDSESSION();
extern DWORD prim_wM_ENDSESSION();
extern DWORD prim_wM_QUIT();
extern DWORD prim_wM_CREATE();
extern DWORD prim_wM_NCCREATE();
extern DWORD prim_wM_DESTROY();
extern DWORD prim_wM_NCDESTROY();
extern DWORD prim_wM_SHOWWINDOW();
extern DWORD prim_wM_SETREDRAW();
extern DWORD prim_wM_ENABLE();
extern DWORD prim_wM_SETTEXT();
extern DWORD prim_wM_GETTEXT();
extern DWORD prim_wM_GETTEXTLENGTH();
extern DWORD prim_wM_WINDOWPOSCHANGING();
extern DWORD prim_wM_WINDOWPOSCHANGED();
extern DWORD prim_wM_MOVE();
extern DWORD prim_wM_SIZE();
extern DWORD prim_wM_QUERYOPEN();
extern DWORD prim_wM_CLOSE();
extern DWORD prim_wM_GETMINMAXINFO();
extern DWORD prim_wM_PAINT();
extern DWORD prim_wM_ERASEBKGND();
extern DWORD prim_wM_ICONERASEBKGND();
extern DWORD prim_wM_NCPAINT();
extern DWORD prim_wM_NCCALCSIZE();
extern DWORD prim_wM_QUERYDRAGICON();
extern DWORD prim_wM_DROPFILES();
extern DWORD prim_wM_ACTIVATE();
extern DWORD prim_wM_ACTIVATEAPP();
extern DWORD prim_wM_NCACTIVATE();
extern DWORD prim_wM_SETFOCUS();
extern DWORD prim_wM_KILLFOCUS();
extern DWORD prim_wM_KEYDOWN();
extern DWORD prim_wM_KEYUP();
extern DWORD prim_wM_CHAR();
extern DWORD prim_wM_DEADCHAR();
extern DWORD prim_wM_SYSKEYDOWN();
extern DWORD prim_wM_SYSKEYUP();
extern DWORD prim_wM_SYSCHAR();
extern DWORD prim_wM_SYSDEADCHAR();
extern DWORD prim_wM_KEYFIRST();
extern DWORD prim_wM_KEYLAST();
extern DWORD prim_wM_MOUSEMOVE();
extern DWORD prim_wM_LBUTTONDOWN();
extern DWORD prim_wM_LBUTTONUP();
extern DWORD prim_wM_LBUTTONDBLCLK();
extern DWORD prim_wM_RBUTTONDOWN();
extern DWORD prim_wM_RBUTTONUP();
extern DWORD prim_wM_RBUTTONDBLCLK();
extern DWORD prim_wM_MBUTTONDOWN();
extern DWORD prim_wM_MBUTTONUP();
extern DWORD prim_wM_MBUTTONDBLCLK();
extern DWORD prim_wM_MOUSEFIRST();
extern DWORD prim_wM_MOUSELAST();
extern DWORD prim_wM_NCMOUSEMOVE();
extern DWORD prim_wM_NCLBUTTONDOWN();
extern DWORD prim_wM_NCLBUTTONUP();
extern DWORD prim_wM_NCLBUTTONDBLCLK();
extern DWORD prim_wM_NCRBUTTONDOWN();
extern DWORD prim_wM_NCRBUTTONUP();
extern DWORD prim_wM_NCRBUTTONDBLCLK();
extern DWORD prim_wM_NCMBUTTONDOWN();
extern DWORD prim_wM_NCMBUTTONUP();
extern DWORD prim_wM_NCMBUTTONDBLCLK();
extern DWORD prim_wM_MOUSEACTIVATE();
extern DWORD prim_wM_CANCELMODE();
extern DWORD prim_wM_TIMER();
extern DWORD prim_wM_INITMENU();
extern DWORD prim_wM_INITMENUPOPUP();
extern DWORD prim_wM_MENUSELECT();
extern DWORD prim_wM_MENUCHAR();
extern DWORD prim_wM_COMMAND();
extern DWORD prim_wM_HSCROLL();
extern DWORD prim_wM_VSCROLL();
extern DWORD prim_wM_CUT();
extern DWORD prim_wM_COPY();
extern DWORD prim_wM_PASTE();
extern DWORD prim_wM_CLEAR();
extern DWORD prim_wM_UNDO();
extern DWORD prim_wM_RENDERFORMAT();
extern DWORD prim_wM_RENDERALLFORMATS();
extern DWORD prim_wM_DESTROYCLIPBOARD();
extern DWORD prim_wM_DRAWCLIPBOARD();
extern DWORD prim_wM_PAINTCLIPBOARD();
extern DWORD prim_wM_SIZECLIPBOARD();
extern DWORD prim_wM_VSCROLLCLIPBOARD();
extern DWORD prim_wM_HSCROLLCLIPBOARD();
extern DWORD prim_wM_ASKCBFORMATNAME();
extern DWORD prim_wM_CHANGECBCHAIN();
extern DWORD prim_wM_SETCURSOR();
extern DWORD prim_wM_SYSCOMMAND();
extern DWORD prim_wM_MDICREATE();
extern DWORD prim_wM_MDIDESTROY();
extern DWORD prim_wM_MDIACTIVATE();
extern DWORD prim_wM_MDIRESTORE();
extern DWORD prim_wM_MDINEXT();
extern DWORD prim_wM_MDIMAXIMIZE();
extern DWORD prim_wM_MDITILE();
extern DWORD prim_wM_MDICASCADE();
extern DWORD prim_wM_MDIICONARRANGE();
extern DWORD prim_wM_MDIGETACTIVE();
extern DWORD prim_wM_MDISETMENU();
extern DWORD prim_wM_CHILDACTIVATE();
extern DWORD prim_wM_INITDIALOG();
extern DWORD prim_wM_NEXTDLGCTL();
extern DWORD prim_wM_PARENTNOTIFY();
extern DWORD prim_wM_ENTERIDLE();
extern DWORD prim_wM_GETDLGCODE();
extern DWORD prim_wM_SETFONT();
extern DWORD prim_wM_GETFONT();
extern DWORD prim_wM_DRAWITEM();
extern DWORD prim_wM_MEASUREITEM();
extern DWORD prim_wM_DELETEITEM();
extern DWORD prim_wM_COMPAREITEM();
extern DWORD prim_wM_VKEYTOITEM();
extern DWORD prim_wM_CHARTOITEM();
extern DWORD prim_wM_QUEUESYNC();
extern DWORD prim_wM_USER();
extern DWORD prim_wM_APP();
extern DWORD prim_registerWindowMessage(char * arg1);
extern WPARAM prim_sIZE_RESTORED();
extern WPARAM prim_sIZE_MINIMIZED();
extern WPARAM prim_sIZE_MAXIMIZED();
extern WPARAM prim_sIZE_MAXSHOW();
extern WPARAM prim_sIZE_MAXHIDE();